validation fix
