# schemas/newUser.js
@@ -1,24 +1,14 @@
 const Joi = require("joi");
+const { locationError, passwordError, phoneError, userNameError } = require("./errors");
 
-const passwordError = new Error(`The password must be between 7 and 32 characters long and can contain any character except spaces`);
-const phoneError = new Error(`The phone number must be in the following format: "+38096XXXXXXX"`);
-const addressError = new Error(`The address should consist of two parts (city, region) separated by a comma and a space, like this: "Brovary, Kiev"`);
+const { passwordPattern, locationPattern, phonePattern, allLettersPattern } = require("./patterns");
 
 const newUserSchema = Joi.object({
-  password: Joi.string()
-    .pattern(/^[^ ]{7,32}$/)
-    .error(passwordError)
-    .required(),
+  password: Joi.string().pattern(passwordPattern).error(passwordError).required(),
   email: Joi.string().email().required(),
-  name: Joi.string().required(),
-  address: Joi.string()
-    .pattern(/^[a-zA-Z]+[,][ ][a-zA-Z]+$/)
-    .error(addressError)
-    .required(),
-  phone: Joi.string()
-    .pattern(/^[+]{1}[0-9]{12}$/)
-    .error(phoneError)
-    .required(),
+  name: Joi.string().pattern(allLettersPattern).error(userNameError).required(),
+  location: Joi.string().pattern(locationPattern).error(locationError).required(),
+  phone: Joi.string().pattern(phonePattern).error(phoneError).required(),
 })
   .options({ abortEarly: false })
   .required();
